removed nuxt 3 references

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt3-cache-keys",
+  "name": "nuxt-cache-keys",
   "author": "Niklas Wolf",
   "version": "1.0.0",
   "license": "MIT",
